fix distorted logo image

--- a/src/styles/_header.scss
+++ b/src/styles/_header.scss
@@ -37,9 +37,13 @@
 }
 
 .logo {
-    display: block;
-    // width: 100%;
-    // max-height: 80px;
+    width: 150px !important;
+    height: 65px !important;
+
+    &>img {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 .navbar-toggler {
